faq) 하나의 질문 클릭 시 여러 질문+답변 나오는 오류 수정

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -48,9 +48,9 @@
                   <li>
                     <div class="qa_box">
                       <div class="q_box">
-                        <a href=""><span>01</span>협업 문의는 어떻게 하면 될까요?</a>
+                        <a href="javascript:;"><span>01</span>협업 문의는 어떻게 하면 될까요?</a>
                       </div>
-                      <div class="a_box a_box1">
+                      <div class="a_box">
                         <a href="javascript:;">
                           새로운 경험을 만드는 일은 언제나
                           환영합니다.<br />
@@ -65,10 +65,10 @@
                   <li>
                     <div class="qa_box">
                       <div class="q_box">
-                        <a href=""><span>02</span>해외에서도 가입할 수 있나요?</a>
+                        <a href="javascript:;"><span>02</span>해외에서도 가입할 수 있나요?</a>
                       </div>
-                      <div class="a_box a_box2">
-                        <a href="">가입할 수 있습니다.</a>
+                      <div class="a_box">
+                        <a href="javascript:;">가입할 수 있습니다.</a>
                       </div>
                     </div>
                     <!--qa_box-->
@@ -76,10 +76,10 @@
                   <li>
                     <div class="qa_box">
                       <div class="q_box">
-                        <a href=""><span>03</span>스탬프를 모으면 어떤 혜택을 받을 수 있나요?</a>
+                        <a href="javascript:;"><span>03</span>스탬프를 모으면 어떤 혜택을 받을 수 있나요?</a>
                       </div>
-                      <div class="a_box a_box3">
-                        <a href="">
+                      <div class="a_box">
+                        <a href="javascript:;">
                           새로운 경험을 만드는 일은 언제나
                           환영합니다.<br />
                           대표메일로 협업의 내용, 궁금하신 점을 전달해
@@ -92,11 +92,11 @@
                   </li>
                   <li>
                     <div class="qa_box">
-                      <div class="q_box a_box4">
-                        <a href=""><span>04</span>스탬프를 다 모았는데 어디서 교환할 수 있나요?</a>
+                      <div class="q_box">
+                        <a href="javascript:;"><span>04</span>스탬프를 다 모았는데 어디서 교환할 수 있나요?</a>
                       </div>
                       <div class="a_box">
-                        <a href="">
+                        <a href="javascript:;">
                             홈페이지에서 교환하실 수 있습니다</a
                         >
                       </div>
